--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,9 @@
   <body>
     <div>
       <h2>Vue実装</h2>
-      <div id="app"></div>
+      <div id="vue-app"></div>
+      <h2>React実装</h2>
+      <div id="react-app"></div>
     </div>
   </body>
 </html>
