update: compare style

--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,15 @@
     <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon" />
   </head>
   <body>
-    <div>
-      <h2>Vue実装</h2>
-      <div id="vue-app"></div>
-      <h2>React実装</h2>
-      <div id="react-app"></div>
+    <div class="compare-wrapper">
+      <div class="vue">
+        <h2>Vue実装</h2>
+        <div id="vue-app"></div>
+      </div>
+      <div class="react">
+        <h2>React実装</h2>
+        <div id="react-app"></div>
+      </div>
     </div>
   </body>
 </html>
